# witnesscalc

./: .gitignore  CMakeLists.txt  README.md  build_android_arm64.sh  build_ios.sh  build_macos_arm64.sh  passportVerificationValidity.inputs.json  patch_cpp.sh  test_passport.sh
cmake/: circuits_source_generator.cmake  lib_source_generator.cmake  platform.cmake
cmake/tpl/: CMakeLists.tpl.cmake  calcwit.cpp  calcwit.hpp  circom.hpp  witnesscalc.cpp  witnesscalc.h  witnesscalc_tpl.cpp  witnesscalc_tpl.h
src/: CMakeLists.txt  circom.hpp  main.cpp  witnesscalc.h
src/circuits/Commitment/: CMakeLists.txt  calcwit.cpp  calcwit.hpp  circom.hpp  witnesscalc.cpp  witnesscalc.h  witnesscalc_commitment.cpp  witnesscalc_commitment.h
src/circuits/EdDSADocumentVerifier/: CMakeLists.txt  EdDSADocumentVerifier.cpp  calcwit.cpp  calcwit.hpp  circom.hpp  witnesscalc.cpp  witnesscalc.h  witnesscalc_edDSADocumentVerifier.cpp  witnesscalc_edDSADocumentVerifier.h
src/circuits/MerkleTreeVerifier/: CMakeLists.txt  calcwit.cpp  calcwit.hpp  circom.hpp  witnesscalc.cpp  witnesscalc.h  witnesscalc_merkleTreeVerifier.cpp  witnesscalc_merkleTreeVerifier.h
src/circuits/PassportVerificationValidity/: CMakeLists.txt  PassportVerificationValidity.cpp  calcwit.cpp  calcwit.hpp  circom.hpp  witnesscalc.cpp  witnesscalc.h  witnesscalc_passportVerificationValidity.cpp  witnesscalc_passportVerificationValidity.h
src/circuits/PassportVerificationValidityWithCountryIn/: CMakeLists.txt  PassportVerificationValidityWithCountryIn.cpp  calcwit.cpp  calcwit.hpp  circom.hpp  witnesscalc.cpp  witnesscalc.h  witnesscalc_passportVerificationValidityWithCountryIn.cpp  witnesscalc_passportVerificationValidityWithCountryIn.h
src/circuits/PassportVerificationValidityWithName/: CMakeLists.txt  PassportVerificationValidityWithName.cpp  calcwit.cpp  calcwit.hpp  circom.hpp  witnesscalc.cpp  witnesscalc.h  witnesscalc_passportVerificationValidityWithName.h
